fixed header button, fixed portfolio margins and images, fixed porfolio spacing

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -329,11 +329,35 @@ header {
 header span {
   color: #f8b400;
 }
+header .headerText {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
 header .headerIcon {
-  max-width: 10%;
-  max-height: 8%;
+  max-width: 7vw;
+  max-height: auto;
   border-radius: 40%;
   margin-bottom: 2%;
+}
+header .downIcon {
+  position: relative;
+  top: 25vh;
+}
+header .downIcon .bi-caret-down {
+  color: #f8b400;
+  border: solid 2px #f8b400;
+  border-radius: 10px;
+  padding: 0.5vw 1vw 0.7vw 1vw;
+  -webkit-animation: MoveUpDown 1s infinite;
+          animation: MoveUpDown 1s infinite;
 }
 header a {
   text-decoration: none;
@@ -367,18 +391,6 @@ header h2 {
   font-size: 2rem;
   font-weight: 400;
   z-index: 100;
-}
-header .bi-caret-down {
-  color: #f8b400;
-  border: solid 2px #f8b400;
-  border-radius: 10px;
-  padding: 0.5% 1% 0.5% 1%;
-  position: absolute;
-  top: 90vh;
-  left: 40%;
-  -webkit-animation: MoveUpDown 1s infinite;
-          animation: MoveUpDown 1s infinite;
-  position: absolute;
 }
 header .bi-github::before {
   display: block;
@@ -493,7 +505,7 @@ header .cursor {
   text-align: justify;
 }
 .portfolio img {
-  width: 40%;
+  width: 30vw;
   border: solid 2px rgba(9, 9, 28, 0.7);
   border-radius: 10px;
 }
@@ -540,10 +552,16 @@ header .cursor {
 .portfolio .project .projectWriteUp .linkButtons a {
   cursor: pointer;
 }
-.portfolio .project .projectImageLeft {
+.portfolio .project .projectImageLeft img {
   margin-right: 2vw;
 }
 .portfolio .project .projectImageRight {
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: reverse;
+      -ms-flex-direction: row-reverse;
+          flex-direction: row-reverse;
+}
+.portfolio .project .projectImageRight img {
   margin-left: 2vw;
 }
 
@@ -648,7 +666,7 @@ header .cursor {
   border-radius: 25px;
 }
 .aboutMe .aboutMeText p {
-  font-size: 1.05rem;
+  font-size: 1.5rem;
   color: white;
 }
 
@@ -937,12 +955,6 @@ header .cursor {
         -ms-flex-align: center;
             align-items: center;
   }
-  .portfolio .projectWriteUp {
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
-  }
   .portfolio h3 {
     font-size: 2rem;
     text-align: center;
@@ -983,63 +995,45 @@ header .cursor {
     width: 2vw;
     font-size: 2.5vw;
   }
+  .portfolio .project {
+    margin-bottom: 15vh;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+  .portfolio .project img {
+    width: 70vw;
+    margin-top: 5vh;
+  }
   .portfolio .project .projectImageLeft,
   .portfolio .project .projectImageRight {
     margin-right: 0;
     margin-left: 0;
   }
-  .portfolio .project .projectWriteUp h2,
-  .portfolio .project .projectWriteUp p,
-  .portfolio .project .projectWriteUp a,
-  .portfolio .project .projectWriteUp .linkButtons {
-    text-align: center;
+  .portfolio .project .projectWriteUp {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
   }
-  .portfolio .project .projectWriteUp .skillButton {
-    display: none;
+  .portfolio .project .projectWriteUp h2 {
+    font-size: 4vw;
+    text-align: left;
+    padding: 0;
   }
-  .portfolio .project .projectWriteUp .skillButton p {
-    border: solid 1px black;
-    margin-bottom: 3%;
-    padding: 1%;
-  }
-  .portfolio .project .projectWriteUp .linkButtons a {
-    background-color: black;
-    color: white;
-    margin: 0;
-  }
-  .portfolio .project .projectWriteUp .overlay {
-    display: none;
-  }
-  .portfolio .project .projectWriteUp.show-overlay .overlay {
-    display: block;
-  }
-  .portfolio .project .overlay {
-    display: none;
-  }
-  .portfolio .project .overlay {
-    display: block;
-    z-index: 10;
-    padding: 7%;
-    position: absolute;
-    width: 80vw;
-    height: 100%;
-    opacity: 0;
-    -webkit-transition: 0.5s ease;
-    transition: 0.5s ease;
-    color: black;
-    background-color: white;
-  }
-  .portfolio .project .overlay h2 {
-    font-size: 3.5vw;
-  }
-  .portfolio .project .overlay p {
+  .portfolio .project .projectWriteUp p {
     font-size: 2.5vw;
     text-align: left;
-    margin-bottom: 0;
   }
-  .project:hover .overlay,
-  .project:focus .overlay {
-    opacity: 0.98;
+  .portfolio .project .projectWriteUp .skillButton p {
+    border: solid 1px white;
+    margin-bottom: 1%;
+  }
+  .portfolio .project .projectWriteUp .linkButtons a {
+    background-color: white;
+    color: #09091c;
+    margin: 0;
   }
 }
 .learnMoreClickText {
